<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Prontera Ro Classic</string>
    <string name="hockeyapp_crash_dialog_app_name_fallback">This app</string>
    <string name="hockeyapp_crash_dialog_message">Would you like to send an anonymous report so we can fix the problem?</string>
    <string name="hockeyapp_crash_dialog_negative_button">"Don't Send"</string>
    <string name="hockeyapp_crash_dialog_neutral_button">Always Send</string>
    <string name="hockeyapp_crash_dialog_positive_button">Send Report</string>
    <string name="hockeyapp_crash_dialog_title">%s Unexpectedly Quit</string>
    <string name="hockeyapp_dialog_error_message">An error has occurred</string>
    <string name="hockeyapp_dialog_error_title">Error</string>
    <string name="hockeyapp_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_dialog_positive_button">OK</string>
    <string name="hockeyapp_download_failed_dialog_message">The update could not be downloaded. Would you like to try again?</string>
    <string name="hockeyapp_download_failed_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_download_failed_dialog_positive_button">Retry</string>
    <string name="hockeyapp_download_failed_dialog_title">Download Failed</string>
    <string name="hockeyapp_error_no_network_message">Your device is not connected to the internet. Please resolve connectivity issues and try again.</string>
    <string name="hockeyapp_expiry_info_text">%s has expired. Please check HockeyApp for any updates.</string>
    <string name="hockeyapp_expiry_info_title">Build Expired</string>
    <string name="hockeyapp_feedback_attach_file">Attach File</string>
    <string name="hockeyapp_feedback_attach_picture">Attach Picture</string>
    <string name="hockeyapp_feedback_attachment_button_text">Add Attachment</string>
    <string name="hockeyapp_feedback_attachment_error">Error</string>
    <string name="hockeyapp_feedback_attachment_loading">Loading…</string>
    <string name="hockeyapp_feedback_email_hint">Email</string>
    <string name="hockeyapp_feedback_failed_text">Would you like to send your feedback again?</string>
    <string name="hockeyapp_feedback_failed_title">Pending</string>
    <string name="hockeyapp_feedback_fetching_feedback_text">Retrieving discussions…</string>
    <string name="hockeyapp_feedback_generic_error">An error has occurred</string>
    <string name="hockeyapp_feedback_last_updated_text">Last Updated:</string>
    <string name="hockeyapp_feedback_max_attachments_allowed">Only %s attachments allowed.</string>
    <string name="hockeyapp_feedback_message_hint">Message</string>
    <string name="hockeyapp_feedback_name_hint">Name</string>
    <string name="hockeyapp_feedback_refresh_button_text">Refresh</string>
    <string name="hockeyapp_feedback_response_button_text">Add a Response</string>
    <string name="hockeyapp_feedback_select_file">Select File</string>
    <string name="hockeyapp_feedback_select_picture">Select Picture</string>
    <string name="hockeyapp_feedback_send_button_text">Send Feedback</string>
    <string name="hockeyapp_feedback_send_generic_error">"Message couldn't be posted. Please check your input values and your connection, then try again."</string>
    <string name="hockeyapp_feedback_send_network_error">No response from server. Please check your connection, then try again.</string>
    <string name="hockeyapp_feedback_sending_feedback_text">Sending feedback…</string>
    <string name="hockeyapp_feedback_subject_hint">Subject</string>
    <string name="hockeyapp_feedback_title">Feedback</string>
    <string name="hockeyapp_feedback_validate_email_empty">Please enter an email address</string>
    <string name="hockeyapp_feedback_validate_email_error">Please enter a name</string>
    <string name="hockeyapp_feedback_validate_name_error">Please enter a feedback text</string>
    <string name="hockeyapp_feedback_validate_subject_error">Please enter a subject</string>
    <string name="hockeyapp_feedback_validate_text_error">"Message couldn't be posted. Please check the format of your email address."</string>
    <string name="hockeyapp_login_email_hint">Email</string>
    <string name="hockeyapp_login_headline_text">"Please enter your HockeyApp account's email address and password to authorize access to this app."</string>
    <string name="hockeyapp_login_headline_text_email_only">"Please enter your HockeyApp account's email address to authorize access to this app."</string>
    <string name="hockeyapp_login_login_button_text">Login</string>
    <string name="hockeyapp_login_missing_credentials_toast">Please fill in the missing account credentials.</string>
    <string name="hockeyapp_login_password_hint">Password</string>
    <string name="hockeyapp_paint_dialog_message">Do you want to save your drawings?</string>
    <string name="hockeyapp_paint_dialog_negative_button">Discard</string>
    <string name="hockeyapp_paint_dialog_neutral_button">Cancel</string>
    <string name="hockeyapp_paint_dialog_positive_button">Save</string>
    <string name="hockeyapp_paint_indicator_toast">Draw something!</string>
    <string name="hockeyapp_paint_menu_clear">Clear</string>
    <string name="hockeyapp_paint_menu_save">Save</string>
    <string name="hockeyapp_paint_menu_undo">Undo</string>
    <string name="hockeyapp_permission_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_permission_dialog_positive_button">Retry</string>
    <string name="hockeyapp_permission_update_message">In order to download and install app updates you will have to allow the app to access your device storage.</string>
    <string name="hockeyapp_permission_update_title">Need storage access</string>
    <string name="hockeyapp_update_button">Update</string>
    <string name="hockeyapp_update_dialog_message">Show information about the new update?</string>
    <string name="hockeyapp_update_dialog_negative_button">Ignore</string>
    <string name="hockeyapp_update_dialog_positive_button">Show</string>
    <string name="hockeyapp_update_dialog_title">Update Available</string>
    <string name="hockeyapp_update_mandatory_toast">%s is available and is a mandatory update!</string>
    <string name="hockeyapp_update_version_details_label">"%1$s
%2$s - %3$s"</string>
    <string name="Show" />
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="loginpassword">Login and Password</string>
    <string name="OK">OK</string>
    <string name="startgame">Start Game</string>
    <string name="Continue">Continue</string>
    <string name="Quit">Quit</string>
    <string name="ServerSelect">Server Select</string>
    <string name="Create">Create</string>
    <string name="Name">Name</string>
    <string name="Hairstyle">Hairstyle</string>
    <string name="Haircolor">Hair Color</string>
    <string name="RightArrow">>>></string>
    <string name="LeftArrow">&lt;&lt;&lt;</string>
    <string name="CreateNewCharacter">Create New Character</string>
    <string name="Bullet">•</string>
</resources>
