<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout_char_select_create" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textview_createnewchar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/CreateNewCharacter" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <Button android:id="@id/button_create" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Create" android:layout_toRightOf="@id/edittext_name" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <EditText android:id="@id/edittext_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/Name" android:ems="10" android:maxLength="23" android:layout_alignTop="@id/button_create" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:inputType="text">
        <requestFocus />
    </EditText>
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textview_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Bullet" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    <Button android:id="@id/button_hairstyle_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LeftArrow" android:layout_above="@id/textview_left" android:layout_alignParentLeft="true" />
    <Button android:id="@id/button_hairstyle_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/RightArrow" android:layout_above="@id/textview_left" android:layout_alignParentRight="true" />
    <Button android:id="@id/button_haircolor_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/RightArrow" android:layout_above="@id/button_hairstyle_right" android:layout_alignParentRight="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView2" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="LUK" android:layout_alignTop="@id/seekBar1" android:layout_alignBottom="@id/seekBar1" android:layout_alignParentRight="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView1" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="AGI" android:layout_alignTop="@id/seekBar1" android:layout_alignBottom="@id/seekBar1" android:layout_alignParentLeft="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView3" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="VIT" android:layout_alignTop="@id/seekBar2" android:layout_alignBottom="@id/seekBar2" android:layout_alignParentLeft="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView4" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="DEX" android:layout_alignTop="@id/seekBar2" android:layout_alignBottom="@id/seekBar2" android:layout_alignParentRight="true" />
    <SeekBar android:id="@id/seekBar1" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="@integer/MaxCharCreateStat" android:progress="@integer/MidCharCreateStat" android:progressDrawable="@drawable/menu_ninepatch_white" android:layout_toLeftOf="@id/button_hairstyle_right" android:layout_toRightOf="@id/button_hairstyle_left" android:layout_above="@id/button_create" />
    <SeekBar android:id="@id/seekBar2" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="@integer/MaxCharCreateStat" android:progress="@integer/MidCharCreateStat" android:progressDrawable="@drawable/editbox_ninepatch_white" android:layout_toLeftOf="@id/button_hairstyle_right" android:layout_toRightOf="@id/button_hairstyle_left" android:layout_above="@id/seekBar1" />
    <SeekBar android:id="@id/seekBar3" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="@integer/MaxCharCreateStat" android:progress="@integer/MidCharCreateStat" android:progressDrawable="@drawable/menu_ninepatch_white" android:layout_toLeftOf="@id/button_hairstyle_right" android:layout_toRightOf="@id/button_hairstyle_left" android:layout_above="@id/seekBar2" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView6" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="INT" android:layout_alignTop="@id/seekBar3" android:layout_alignBottom="@id/seekBar3" android:layout_alignParentRight="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView5" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="STR" android:layout_alignTop="@id/seekBar3" android:layout_alignBottom="@id/seekBar3" android:layout_alignParentLeft="true" />
    <ImageView android:id="@id/imageview_character" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/poring_2" android:layout_above="@id/seekBar3" android:layout_below="@id/textview_createnewchar" android:layout_alignLeft="@id/seekBar3" android:layout_alignRight="@id/seekBar3" />
    <Button android:id="@id/button_haircolor_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LeftArrow" android:layout_toLeftOf="@id/imageview_character" android:layout_alignBaseline="@id/button_haircolor_right" android:layout_alignBottom="@id/button_haircolor_right" android:layout_alignParentLeft="true" />
    <RadioButton android:id="@id/radio_male" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Male" android:layout_above="@id/edittext_name" android:layout_alignParentLeft="true" />
    <RadioButton android:id="@id/radio_female" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Female" android:layout_toRightOf="@id/radio_male" android:layout_above="@id/edittext_name" />
    <RadioButton android:id="@id/radio_racehuman" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="Human" android:layout_above="@id/radio_male" android:layout_alignParentLeft="true" />
    <RadioButton android:id="@id/radio_racedoram" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Doram" android:layout_toRightOf="@id/radio_racehuman" android:layout_above="@id/radio_male" />
</RelativeLayout>
